tests/neg/linear.fq
bind 0 x : {v : int | true}
bind 1 y : {v : int | true}
bind 2 y : {v : int | true}

// constraint:
//   env [0]
//   lhs {v : int | x = 10}
//   rhs {v : int | $k0[v:=x]}
//   id 1 tag []

constraint:
  env [1]
  lhs {v : int | y <= v}
  rhs {v : int | v >= 0}
  id 1 tag []

constraint:
  env [0;1]
  lhs {v : int | true}
  rhs {v : int | y <= x}
  id 2 tag []

constraint:
  env [0;2]
  lhs {v : int | [v == y; y <= x] }
  rhs {v : int | [v == y] }
  id 3 tag []

// constraint:
//   env [2]
//   lhs {v : int | $k0[v:=z]}
//   rhs {v : int | 10 <= z}
//   id 3 tag []

// wf:
//   env [ ]
//   reft {v: int | $k0}
